# glitter

./: .docs.yml  .glitterrc  .glitterrc.broken  Cargo.toml  LICENSE  README.md  install.sh  package.json  rustfmt.toml  tsconfig.json
.cargo/: config
.github/: FUNDING.yml  dependabot.yml
.github/actions-rs/: grcov.yml
.github/chglog/: changelog.yml  release.yml
.github/workflows/: audit.yml  codecov.yml  deploy.yml  fmt.yml  linted.yml  rust.yml
docs/: index.md
src/: cli.rs  config.rs  get_and_parse.rs  index.ts  lib.rs  logger.rs  main.rs
