[package]
name = "glitter"
version = "1.6.1"
authors = ["Milo123459"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
serde_json = "1.0.83"
serde = { version = "1.0.143", features = ["derive"] }
structopt = "0.3.26"
anyhow = "1.0.64"
fancy-regex = "0.10.0"
Inflector = { version = "0.11.4", default-features = false }
colored = "2.0.0"
which = "4.2.5"
ms = "0.1.1"
spinoff = "0.5.3"

[profile.release]
lto = "fat"
panic = "abort"
