[package]
name = "glitter"
version = "1.6.5"
authors = ["Milo123459"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
structopt = "0.3.26"
anyhow = "1.0.81"
fancy-regex = "0.13.0"
Inflector = { version = "0.11.4", default-features = false }
colored = "2.1.0"
which = "6.0.1"
ms = "0.1.1"
spinoff = "0.8.0"

[profile.release]
lto = "fat"
panic = "abort"
